--- a/index.html
+++ b/index.html
@@ -79,38 +79,53 @@
                     <img src="./img/film2.png" class="card__img" alt="">
                     <div class="card__bg"></div>
                     <span class="play"><i class="fad fa-play"></i></span>
-                    <p class="timer">2:14:33</p>
-                    <h3 class="card__h">Black Panther</h3>
+                    <p class="timer">2:32:13</p>
+                    <h3 class="card__h">The Dark Knight</h3>
                     <p class="card__desc">
-                        At first glance, you can decide that Wakanda is an ordinary territory of wild Africa, but this
-                        is not so. Here, in the bowels of the desert lands, there are hidden deposits of a unique metal
-                        capable of absorbing...
+                        Batman raises stakes in the war on crime. With the help of Lieutenant Jim Gordon and Attorney
+                        Harvey Dent, he intends to clear the streets of crime that is poisoning the city. The
+                        cooperation is effective, but soon they...
                     </p>
                 </a>
                 <a href="#" class="card">
                     <img src="./img/film3.png" class="card__img" alt="">
                     <div class="card__bg"></div>
                     <span class="play"><i class="fad fa-play"></i></span>
-                    <p class="timer">2:14:33</p>
-                    <h3 class="card__h">Black Panther</h3>
+                    <p class="timer">1:53:45</p>
+                    <h3 class="card__h">The Gentlemen</h3>
                     <p class="card__desc">
-                        At first glance, you can decide that Wakanda is an ordinary territory of wild Africa, but this
-                        is not so. Here, in the bowels of the desert lands, there are hidden deposits of a unique metal
-                        capable of absorbing...
+                        One cunning American, from his student years, had been selling drugs, and now he came up with a
+                        scheme of illegal enrichment using the estates of an impoverished English aristocracy and made a
+                        very good fortune on ...
                     </p>
                 </a>
                 <a href="#" class="card">
                     <img src="./img/film4.png" class="card__img" alt="">
                     <div class="card__bg"></div>
                     <span class="play"><i class="fad fa-play"></i></span>
-                    <p class="timer">2:14:33</p>
-                    <h3 class="card__h">Black Panther</h3>
+                    <p class="timer">2:58:20</p>
+                    <h3 class="card__h">The Lord of the...</h3>
                     <p class="card__desc">
-                        At first glance, you can decide that Wakanda is an ordinary territory of wild Africa, but this
-                        is not so. Here, in the bowels of the desert lands, there are hidden deposits of a unique metal
-                        capable of absorbing...
+                        Tales of Middle-earth is a chronicle of the Great War for the Ring, a war that lasted more than
+                        one thousand years. The one who owned the Ring received power over all living creatures, but was
+                        obliged to serve evil...
                     </p>
                 </a>
+            </div>
+        </div>
+    </section>
+
+    <section class="trailer">
+        <video class="trailer__video" src="./videos/Marvel Studios' Black Widow _ Final Trailer.mp4" muted loop autoplay>
+        </video>
+        <div class="container trailer__wrap">
+            <div class="desc">
+                <img src="./img/trail.png" class="desc__img" alt="">
+                <p class="desc__p">After the events at the Leipzig-Halle airport, Natasha was overtaken by the mistakes
+                    of the past. The Red Room again made itself felt - a program to create Widows - professional killers
+                    and spies - just like her. Natasha decides once and for all to deal with people whose efforts she
+                    herself became a Widow.</p>
+                <a href="#" class="btn">Watch now</a>
             </div>
         </div>
     </section>
